--- a/configs/docker.prod.UI
+++ b/configs/docker.prod.UI
@@ -1,4 +1,4 @@
-FROM ubuntu:15.10
+FROM debian
 
 RUN apt-get update && \
     apt-get install -y --force-yes --no-install-recommends \
@@ -15,29 +15,32 @@ RUN apt-get update && \
 
 # install node
 WORKDIR /opt
-ENV NODE_VERSION=8.11.1
+ENV NODE_VERSION=10.1.0
 COPY ./resources/node-v${NODE_VERSION}-linux-x64.tar.xz ./node.tar.xz
 RUN tar xJf node.tar.xz --directory /opt && \
     rm -f node.tar.xz
 ENV PATH ${PATH}:/opt/node-v${NODE_VERSION}-linux-x64/bin
 # node-gyp build require node header, and doing this can get it from offline
-RUN curl -o /opt/node-v${NODE_VERSION}-headers.tar.gz -k https://nodejs.org/download/release/v${NODE_VERSION}/node-v${NODE_VERSION}-headers.tar.gz
+RUN curl -o /opt/node-v${NODE_VERSION}-headers.tar.gz -k https://nodejs.org/download/release/v${NODE_VERSION}/node-v${NODE_VERSION}-headers.tar.gz && \
+    # and fix the node gyp build permission denied
+    npm config set user 0 && \
+    npm config set unsafe-perm true
 ENV npm_config_nodedir=/opt/node-v${NODE_VERSION}-linux-x64/
 ENV npm_config_tarball=/opt/node-v${NODE_VERSION}-headers.tar.gz
 
 # install yarn
-COPY ./resources/yarn-v1.6.0.tar.gz ./yarn.tar.gz
-RUN mkdir yarn && \
-    tar zxf yarn.tar.gz --directory /opt/yarn --strip-components=1 &&  \
-    rm -f yarn.tar.gz
-ENV PATH ${PATH}:/opt/yarn/bin
+# COPY ./resources/yarn-v1.6.0.tar.gz ./yarn.tar.gz
+# RUN mkdir yarn && \
+#     tar zxf yarn.tar.gz --directory /opt/yarn --strip-components=1 &&  \
+#     rm -f yarn.tar.gz
+# ENV PATH ${PATH}:/opt/yarn/bin
 
 # install tini
 COPY ./resources/tini /tini
 RUN chmod +x /tini
 
-# define variables
-ARG PROJECT=web_static
+# define variables, can be replace in build command
+ARG PROJECT=UI
 
 # add ssh key before yarn install
 # RUN mkdir /root/.ssh/
@@ -48,18 +51,17 @@ ARG PROJECT=web_static
 #     echo "Host github.com\n\tUser git\n" >> /root/.ssh/config
 
 # cache the project dependencies
-WORKDIR /node_resources
-COPY ./src/${PROJECT}/package.json ./package.json
-COPY ./src/${PROJECT}/.yarnrc ./.yarnrc
-RUN yarn install && \
-    rm -frd /node_resources
+# WORKDIR /node_resources
+# COPY ./src/${PROJECT}/package.json ./package.json
+# COPY ./src/${PROJECT}/.yarnrc ./.yarnrc
+# RUN yarn install && \
+#     rm -frd /node_resources
 
 WORKDIR /app
-COPY ./src/${PROJECT} .
+COPY ./services/${PROJECT} .
+RUN chmod +x /app && npm i
 
-EXPOSE 8070
 EXPOSE 8080
-EXPOSE 8081
 
 # execute initialize script
 ENTRYPOINT ["/tini", "--"]
